##Text encoding: utf-8

2010-04-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/paint/C/gchempaint.xml: more help updating.
	* libs/gccv/arrow.h: API documentation work.
	* libs/gccv/item.h: ditto.
	* libs/gccv/line-item.h: ditto.
	* libs/gccv/line.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.h: add GetHelpTag().
	* plugins/paint/atoms/orbital.cc: fixed an undo/redo issue.

2010-04-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Doxyfile.in: minor update.
	* docs/help/paint/C/gchempaint.xml: more help updating.
	* libs/gccv/arrow.h: API documentation work.
	* libs/gccv/item-client.h: ditto.
	* libs/gccv/item.h: ditto.
	* libs/gcp/operation.cc: minor typography update.
	* plugins/paint/atoms/orbital-prop.ui: fixed help button position.
	* plugins/paint/atoms/orbital.cc: don't crash when closig the properties
	box. [#29559] 

2010-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* README: updated for 0.12.
	* configure.ac: post release version bump (0.11.91).
	* docs/help/paint/C/gchempaint.xml: some updates.
	* libs/gccv/structs.h: API docs.
	* libs/gcp/about.cc: updated copyright.
	* libs/gcp/bond.cc: cleaned out obsolete code.
	* libs/gcp/tool.cc: fixed cursor after deactivation.
	* libs/gcu/print-setup-dlg.cc: fixed footer widgets sensitivity.
	* programs/3d/window.cc: updated copyright.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.

2010-04-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: change version to 0.11.90.
	* database/Makefile.am: change space-groups.xml to space-groups.xml.in.
	* database/space-groups.xml: ditto.
	* libs/gccv/arrow.cc: fixed compilation warnings.
	* libs/gccv/circle.cc: ditto.
	* libs/gccv/client.cc: ditto.
	* libs/gccv/hash.cc: ditto.
	* libs/gccv/item-client.cc: ditto.
	* libs/gccv/item.cc: ditto.
	* libs/gccv/line.cc: ditto.
	* libs/gccv/poly-line.cc: ditto.